# pirs

./: .gitignore  .travis.yml  AUTHORS  INSTALL  MIRROR  Makefile  NEWS  Profiles  README  baseCalling_Matrix_analyzer  baseCalling_Matrix_calculator  baseCalling_Matrix_merger  gc_coverage_bias  gc_coverage_bias_plot  getprofile.sh  getprofile.sh.example  pIRS_simulator.md5  simulate_Illumina_reads  simulate_diploid_genome
illumia_reads_parameter_stator/: alignment_stator  alignment_stator.pl  baseCalling_Matrix_analyzer.pl  baseCalling_Matrix_calculator.pl  error_matrix_analyzer  error_matrix_analyzer.pl  error_matrix_calculator  error_matrix_merger  error_matrix_merger.pl  gc_coverage_bias  gc_coverage_bias_plot  illumia_reads_parameter_stator.md5  readme.txt
illumia_reads_parameter_stator/gc_coverage_bias_src/: Makefile  gc_coverage_bias  gc_coverage_bias_plot  gc_coverage_bias_src.md5  main.cpp  self_util.h  stat_soap_coverage.cpp  test_100.dat.dem  test_100.dat.gc  test_200.dat.dem  test_200.dat.gc  test_stat.depth
illumia_reads_simulator/: Makefile  load_file.cpp  load_file.h  simulate.h  simulate_Illumina_reads  simulate_Illumina_reads.cpp  simulate_diploid_genome  simulate_diploid_genome.cpp
illumia_reads_simulator/Profiles/Base-calling_profile/: hum20110701.bwanosnp.count.matrix
illumia_reads_simulator/Profiles/GC-depth_profile/: gcdep100.txt  gcdep150.txt  gcdep200.txt
illumia_reads_simulator/test/: Illumina_70_800.error_rate.distr  Illumina_70_800.insertsize.distr  simulate_Illumina_reads.sh  simulate_diploid_genome.sh
simulate_illumina_reads/: COPYING  Makefile  simulate.cpp  simulate.h  simulate_illumina_reads.cpp  simulate_illumina_reads.h  simulate_snp_indel_seq.cpp  simulate_snp_indel_seq.h
src/: INSTALL  Makefile.am  afterclean.lst  cleansrc.lst  config.h.in  configure.ac  genauto.sh  srclean.sh
src/pirs/: BaseCallingProfile.cpp  BaseCallingProfile.h  CCRspline.h  GCBiasProfile.cpp  GCBiasProfile.h  IndelProfile.cpp  IndelProfile.h  InputStream.cpp  InputStream.h  Lock.h  Makefile  Makefile.am  MaskQvalsByEamss.cpp  MaskQvalsByEamss.h  MaskQvalsByEamss.hh  OutputStream.cpp  OutputStream.h  Profile.cpp  Profile.h  Random.h  Read.h  SharedQueue.h  SimulationParameters.h  config.h  gccMakefile  global.h  load_file.cpp  load_file.h  main.cpp  mt19937-64.cpp  mt19937-64.h  pirs.h  pirs_diploid.cpp  pirs_simulate.cpp  simulate.cpp  simulate.h  simulate_Illumina_reads.cpp  simulate_diploid_genome.cpp  simulate_illumina_reads.cpp  util.cpp  (+1 more)
src/pirs/Profiles/InDel_Profiles/: phixv2.InDel.matrix
src/pirs/test/: Illumina_100_800.error_rate.distr  Illumina_100_800.insertsize.distr  SimReads.err  pirs.sh  ref22_indel.lst  ref22_snp.lst  ref_seq.fa  ref_seq_indel.lst  ref_seq_snp.lst  simulate_diploid_genome.sh
src/simulator/: Makefile  global.h  load_file.cpp  simulate.cpp  simulate_illumina_reads.cpp
src/simulator/test/: ref_seq_invertion.lst  simulate_illumina_reads.sh
src/stator/: alignment_stator.pl  getprofile.sh  indel_hist.dem  indelstat_sam_bam.pl  readme.txt
src/stator/baseCallingMatrix/: autobam.pl  baseCalling_Matrix_analyzer.pl  baseCalling_Matrix_calculator.0.pl  baseCalling_Matrix_calculator.pl  baseCalling_Matrix_calculator.txt  baseCalling_Matrix_merger.old.pl  baseCalling_Matrix_merger.pl  indelstat.pl  merge.pl
src/stator/baseQualityTransition/: gethist.pl  hist.dem  ifollowQ.pl  ifollowQmerge.pl  ifollowQplot.dem  ifollowQplot.pl  ifqQ.pl  itilestator.pl  pifollowQmerge.pl
src/stator/gcContCvgBias/: Makefile  gc_coverage_bias_plot.pl  loess.pl  main.cpp  self_util.cpp  stat_soap_coverage.cpp  stat_soap_coverage.h
