SUBDIRS = pirs

profile1dir   = $(pkgdatadir)/InDel_Profiles
profile2dir   = $(pkgdatadir)/Base-Calling_Profiles
profile3dir   = $(pkgdatadir)/GC-depth_Profiles

dist_profile1_DATA = $(srcdir)/Profiles/InDel_Profiles/*
dist_profile2_DATA = $(srcdir)/Profiles/Base-Calling_Profiles/*
dist_profile3_DATA = $(srcdir)/Profiles/GC-depth_Profiles/*

